--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body, html {
   font-family: "Raleway";
   width: 100%;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 #metadata {
@@ -74,6 +75,10 @@ body, html {
 
 .list table {
   width: 100%;
+}
+
+.list table th {
+  text-align: left;
 }
 
 .list h2 {
